--- a/CSS/style55.css
+++ b/CSS/style55.css
@@ -54,9 +54,7 @@ body {
   padding:0 10px;
 }
 
-#wrap > .container-fluid, .sidebar_holder {
-  /*padding-top: 60px;*/
-}
+
 .container-fluid .credit {
   margin: 20px 0;
 }
@@ -77,9 +75,7 @@ body {
   width: 100%;
 }
 
-.search-query{
 
-}
 
 .thumbnail-holder{
   margin-left: 0!important;
@@ -97,7 +93,7 @@ body {
     max-width:150px;
   }
 
-  .thumbnail-holder .{
+  .thumbnail-holder {
     width:150px;
   }
 
@@ -105,13 +101,9 @@ body {
 	
 .store-header{
   background-color: #222222;
-  background-image: -moz-linear-gradient(top, #222222, #222222);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#222222));
-  background-image: -webkit-linear-gradient(top, #222222, #222222);
-  background-image: -o-linear-gradient(top, #222222, #222222);
-  background-image: linear-gradient(top, #222222, #222222);
+  background-color: white;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c80000', endColorstr='#324832', GradientType=0);
+  background-image: inherit;
 
 }
 
